--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -218,6 +218,7 @@
             "rate-hour":"Rate per hour",
             "rate-minute":"Rate per minute",
             "opinions":"Opinions",
+            "opinions-title":"Opinions",
             "see-all":"See all",
             "rate-hr": "hour",
             "rate-min": "minute",
