--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -217,6 +217,7 @@
             "rate-hour":"Tarifa por hora",
             "rate-minute":"Tarifa por minuto",
             "opinions":"opiniones",
+            "opinions-title":"Opiniones",
             "see-all":"Ver todas",
             "rate-hr": "hora",
             "rate-min": "minuto",
