--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -102,6 +102,7 @@
             "accept-terms": "Acepta los términos y condiciones",
             "create-account": "Crear mi cuenta",
             "creating": "Creando...",
+            "mail-used": "Correo eléctronico ya está siendo usado",
             "log-in":"Inicia sesión"
 
         },
