--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -56,6 +56,8 @@
         "attachment-cap": "Tamaño máximo 1MB",
         "attachment-error": "El archivo debe ser de máximo 1MB.",
         "view": "Ver",
+        "all-required-error": "Se deben completar todos los campos obligatorios",
+        "required-fields": "Campos obligatorios",
         "password-criteria":"La contraseña Debe contener como mínimo una letra mayúscula, una letra minúscula, 1 número, 1 carácter especial y 8 caracteres sin espacio en blanco.",
 
         "menu":{
